# thirvusoft_fractalio

./: README.md  pyproject.toml
thirvusoft_fractalio/: hooks.py  modules.txt
thirvusoft_fractalio/thirvusoft_fractalio/custom/: packed_item.json  sales_invoice.json  sales_invoice_item.json
