[project]
name = "thirvusoft_fractalio"
authors = [
    { name = "Thirvusoft Private Limited", email = "thirvusoft@gmail.com"}
]
description = "thirvusoft_fractalio"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
